Added Router unit tests

--- a/frontend/src/view/bookDetail/bookDetail.css
+++ b/frontend/src/view/bookDetail/bookDetail.css
@@ -38,6 +38,8 @@
 
 .book-detail-meta-data dt:after {
   content: ":";
+  background-color: var(--backgroundColor);
+  color: var(--foregroundColor);
 }
 
 .book-detail-symbol {
