BookAddForm proper error evaluation
BookAdder:
- Implement error evaluation in BookAdder with customError validity
- Update "newBook" via onChange handler for every field

BookList:
- Add click events to every remove button individually

MessageBox:
- Add proper mobile styling
- Add suggestion for positioning all messages into right upper screen
  corner

--- a/frontend/assets/css/formElements.css
+++ b/frontend/assets/css/formElements.css
@@ -51,7 +51,6 @@ input[type=checkbox] + label {
   align-content: center;
 }
 
-
 input[type=checkbox] + label:before {
   content: "\2714";
   border: 0.15rem solid #000;
@@ -88,4 +87,18 @@ input[type=checkbox]:checked:disabled + label:before {
   background-color: #bfb;
   border-color: #bfb;
 }
+
+/** Input Fields **/
+
+/** TODO: Valid input fields **/
+
+
+/** TODO: Invalid input fields **/
+input:focus:invalid,
+textarea:focus:invalid {
+  border: 1px solid red;
+  outline: 1px solid red;
+}
+
+
 
