Finished BookSearch form styling
- In addition Make theme switcher (checkbox) accessible with custom SVG checkmark
- Update working progress in frontend/README.md

--- a/frontend/src/view/appHeader/appHeader.css
+++ b/frontend/src/view/appHeader/appHeader.css
@@ -51,17 +51,74 @@ header {
 /** Theme switcher is styled in here **/
 
 .theme-section {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  gap: 5px;
+  display: grid;
+  grid-template-columns: max-content auto;
+  gap: 0.5rem;
 }
 
+/** Theme switcher label **/
 .theme-section label {
+  /* Layout settings */
+  align-self: center;
+  cursor: pointer;
+
+  /* Typography layout */
+  font-family: system-ui, sans-serif;
   font-size: 1.1rem;
-  font-weight: lighter;
+  line-height: 1.1;
+
+  cursor: pointer;
+  align-self: center;
+  justify-self: left;
+}
+
+/** Theme switcher (checkbox) **/
+.checksign-input {
+  /** Reset checkbox appearance */
+  appearance: initial;
+
+  --icon-size: 30;
+  width: calc(var(--icon-size) * 1px);
+  height: calc(var(--icon-size) * 1px);
+
+  align-self: center;
+  
+  background-color: var(--checkbox-bg, white);
+  border: 1px solid skyblue;
   cursor: pointer;
 }
+
+.checksign-input:checked {
+  --checkbox-bg: #2A8000; /** green-ish **/
+}
+
+/** Focus selectors for checkbox */
+.checksign-input:focus,
+.checksign-input:active,
+.checksign-input:hover {
+  cursor: pointer;
+  border: 1px solid skyblue;
+  outline: 2px solid skyblue;
+}
+
+/** Symbol for theme switcher **/
+
+.checksign-input:checked:after {
+  /** Fill Color is: #2A8000. But the "#" needs to be translated to ASCI %23 because '#' are identifieres in SVG **/
+  content: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352.62 352.62">\
+	<path fill="white" d="M337.222,22.952c-15.912-8.568-33.66,7.956-44.064,17.748c-23.867,23.256-44.063,50.184-66.708,74.664   c-25.092,26.928-48.348,53.856-74.052,80.173c-14.688,14.688-30.6,30.6-40.392,48.96c-22.032-21.421-41.004-44.677-65.484-63.648   c-17.748-13.464-47.124-23.256-46.512,9.18c1.224,42.229,38.556,87.517,66.096,116.28c11.628,12.24,26.928,25.092,44.676,25.704   c21.42,1.224,43.452-24.48,56.304-38.556c22.645-24.48,41.005-52.021,61.812-77.112c26.928-33.048,54.468-65.485,80.784-99.145   C326.206,96.392,378.226,44.983,337.222,22.952z M26.937,187.581c-0.612,0-1.224,0-2.448,0.611   c-2.448-0.611-4.284-1.224-6.732-2.448l0,0C19.593,184.52,22.653,185.132,26.937,187.581z"/>\
+  </svg>');
+  /** To read from data-icon attribute the url for the SVG.
+   *  Note it is not supported by any browser (from 25.02.2022)
+   */
+  content: attr(data-icon url);
+
+  display: block;
+  --reduze-size: 0.3; /* This is a number between 0.0 and 1.0 to determine how much to reduce the icon size */
+  margin: calc((var(--reduze-size) * 0.5) * var(--icon-size, 40) * 1px);
+  width: calc(100% * (1 - var(--reduze-size)));
+}
+
 
 @media all and (max-width: 768px) {
   header {
@@ -69,10 +126,13 @@ header {
       "bl theme theme br"
       "bl headerInfo headerInfo br";
     grid-gap: 0;
-    padding: 1vmin;
   }
 
   .theme-section {
     justify-content: right;
+  }
+
+  .checksign-input {
+    --icon-size: 23;
   }
 }
