--- a/frontend/src/view/bookSearch/bookSearch.css
+++ b/frontend/src/view/bookSearch/bookSearch.css
@@ -7,12 +7,30 @@ h1 {
 /** Form styling **/
 
 form {
-  display: grid;
-  grid-template-columns: 5fr 3fr 3fr minmax(175px, 1fr);
-  grid-gap: 1rem;
+  display: flex;
+  flex-direction: var(--formFlexDirection, row);
+  flex-wrap: wrap;
+  gap: 1.25rem;
   margin-bottom: 1.5rem;
 }
 
+.field[for="searchValue"] {
+  flex: 3;
+}
+
+/** Algin other fields submit button in form **/
+.field[for="searchKey"], .btn-success {
+  flex: 2;
+}
+
+@media (max-width: 1200px) {
+  form {
+    --formFlexDirection: column;
+  }
+}
+
+
+/** Style fields (label and input/select/...) itself **/
 .field, select.form-control {
   display: grid;
   grid-gap: 0.2rem;
@@ -35,12 +53,6 @@ form {
   outline: 2px solid var(--button-shadow-color, skyblue);
 }
 
-
-
-/** Algin submit button in form **/
-.btn-success {
-  grid-column: -3;
-}
 
 /** Add CSS for invalid formular fields **/
 input.form-control:invalid:focus {
@@ -69,6 +81,11 @@ button {
   gap: 0.2rem;
 }
 
+/** Algin submit button in form **/
+.form-control.btn-success {
+  grid-column: -3;
+}
+
 
 /** Add icon to search and reset buttons **/
 
@@ -78,14 +95,10 @@ button {
 }
 
 .btn.btn-danger:before {
-  content: "\01F975"; /* emoji: "hot face" */
-  font-size: 1.65rem;
-}
-
-
-
-/** Algin submit button in form **/
-.form-control.btn-success {
-  grid-column: -3;
+  content: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M433.05,127.87a233.52,233.52,0,0,0-101.4-69L459,32.56a5.16,5.16,0,0,0,4-6.11L458.4,4.12a5.18,5.18,0,0,0-6.12-4L268,38.21a5.17,5.17,0,0,0-3.93,6.48l51.38,181a5.17,5.17,0,0,0,6.38,3.57L343.78,223a5.18,5.18,0,0,0,3.57-6.39L310.49,86.92A199.84,199.84,0,0,1,455.75,279.13c0,110.15-89.61,199.75-199.75,199.75S56.25,389.28,56.25,279.13a199.38,199.38,0,0,1,47.54-129.35,5.16,5.16,0,0,0-.49-7.2l-17-15.19a5.18,5.18,0,0,0-7.39.49,232.87,232.87,0,1,0,354.11,0Z"/></svg>');
+  width: 1.4rem;
+  
+  /* align reset arrow */
+  display: flex;
 }
 
