--- a/frontend/src/view/bookSearch/bookSearch.css
+++ b/frontend/src/view/bookSearch/bookSearch.css
@@ -15,15 +15,15 @@ form {
 }
 
 .field[for="searchValue"] {
-  flex: 3;
+  flex: 2 2 auto;
 }
 
 /** Algin other fields submit button in form **/
 .field[for="searchKey"], .btn-success {
-  flex: 2;
+  flex: 1 2 auto;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 900px) {
   form {
     --formFlexDirection: column;
   }
